feat(oci): add ghcr pull

--- a/example.config.yaml
+++ b/example.config.yaml
@@ -1,3 +1,9 @@
+target:
+  repository: #url
+  dockerfile: #path
+  image: #image
+  ocipath: #
+  branch: branch
 github:
   pat: abc
   username: testuser
