feat(vsc): add pr creation and fix logic

--- a/_example/example_ruleset.yaml
+++ b/_example/example_ruleset.yaml
@@ -21,8 +21,12 @@ rules:
     category: Negative
     instruction: |
       layer_count = fs_util.get_layer_count()
-      assert(len(fs_util.ls_layer("/etc/apt/sources.list/", layer_count - 1)) == 0)
+      # -2 as the test image seems funky? So we are just trying this for now
+      assert(len(fs_util.ls_layer("/etc/apt/sources.list.d/", layer_count - 2)) == 0)
     description: Ensure apt sources are empty
     id: apt sources empty
     target: fs
-
+    fix_instruction: |
+      depth = command_util.get_ast_depth()
+      fix_util.add_run_instruction(depth - 1, "rm -rf /etc/apt/sources.list.d/*")
+      fix_util.finish()
