feat(os util): add docker loading

--- a/testdata/verify.config.yaml
+++ b/testdata/verify.config.yaml
@@ -3,6 +3,7 @@ target:
   dockerfile: "./_example/example.Dockerfile"
   image: #no value -> use local
   ocipath: ./out/out.tar
+  dockerpath: ./out/out_docker.tar
   branch: #no value -> use local
 github:
   pat: # not needed
