--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13' 
+
       - name: Install deps
         run: make dep-install
       
