--- a/.github/workflows/sample-docs.yml
+++ b/.github/workflows/sample-docs.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - ./_example/big_example_ruleset.yaml
-      - ./.github/workflows/sample-docs.yml
+      - _example/big_example_ruleset.yaml
+      - .github/workflows/sample-docs.yml
 
 jobs:
   # This is faster than building
